# databrowser

./: README.md  pyproject.toml
databrowser/: __init__.py  browser.html  cli.py  core.py  server.py
tests/: test_core.py
